AD-2004-01-22-0: Bugfix:    'qconf -km' did not work for the 'LinuxThreads'
                            library (NPTL did work).
                 Changed:   qmaster

CR-2004-01-22-0: Bugfix:    - execd did not signal job
                            - switched of communication log (as default)
                              communication log can be activated with
                              SGE_NGC_DEBUG variable
                 Changed:   execd

SG-2004-01-22-3: Bugfix:    fixed the counting for running jobs in the qevent
                            client.
                 Changed:   qevent
                 Review:    CR

SG-2004-01-22-2: Enhancem.: updated man page for qmod
                 Changed:   man1/qmod.1

SG-2004-01-22-1: Bugfix:    Removed the renaming of users via qconf. It never
                            worked and should not have been part of qconf.
                 Changed:   qconf
                 Issue:     646

SG-2004-01-22-0: Enhancem.: 2. part of the qmod adaption
                 Changed:   qmod, qmaster

EB-2004-01-22-0: Bugfix:    CQ related bugfixes
                            - changed defaults auf CQ template
                            - changed verification of pe_list

EB-2004-01-21-2: Enhancem.: Cleanup / Comments

DT-2004-01-21-0: Bugfix:    drmaa_run_bulk_jobs() wasn't submiting the job as an
                            array job.  Also cleaned up DT-2004-01-19-0.
                 Changed:   drmaa.c, interactive_sched.c
                 Review:    AH

AD-2004-01-21-1: Bugfix:    Handling of 'SGE_DEBUG_TARGET' env var was broken
                 Changed:   rmon

AD-2004-01-21-0: Enhancem:  - 'sge_qmaster' does now handle 'SIGTERM'.
                            - overwork of signal handling.
                 Changed:   qmaster

AA-2004-01-21-0: Enhancem.  qmon cluster queue changes, NOT YET COMPLETED
                            to get the rest of qmon functionality operable