@@ -1,3 +1,7 @@
+AD-2004-01-23-0: Enhancem.: Add error message in case a mutex lock/unlock
+                            does fail.
+                 Changed:   lck
+
 AD-2004-01-22-0: Bugfix:    'qconf -km' did not work for the 'LinuxThreads'
                             library (NPTL did work).
                  Changed:   qmaster
